various fixes
- fixed iphone x landscape popup being too high
- fixed popup bg having a 1px gap
- fixed navigation padding being too small

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -223,7 +223,7 @@ html.is-animating .transition-fade {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
 
   .button {
     padding: 14px 24px;
