--- a/_scss/_index.scss
+++ b/_scss/_index.scss
@@ -145,7 +145,7 @@
 }
 
 //------------------------------------
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
   .header-hero {
     .text-subtitle {
       margin: 10px 8vw 4vh;
@@ -156,7 +156,7 @@
     }
 
     .hero-content {
-      margin: auto 0 20px 0;
+      margin: auto 0 auto 0;
     }
   }
   .vision {
