--- a/_scss/_typo.scss
+++ b/_scss/_typo.scss
@@ -7,7 +7,7 @@
   line-height: 116%;
   font-feature-settings: "salt" on;
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     font-size: clamp(25px, 8vw, 42px);
   }
   @media screen and (max-width: 450px) {
@@ -64,7 +64,7 @@
   line-height: 124.4%;
   font-feature-settings: "salt" on;
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     font-size: clamp(25px, 8vw, 42px);
     line-height: 134%;
   }
@@ -94,7 +94,7 @@
   line-height: 132.3%;
   font-feature-settings: "salt" on;
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 850px) {
     font-size: clamp(18px, 5vw, 20px);
     line-height: 132.3%;
   }
